trunk/GameServer/static/css/main.css
body {
  margin: 0;
  padding: 0;
}
.display {
  width: 100%;
  height: 100%;
  display: block;
}
.hidden {
  display: none;
  width: 0;
  height: 0;
}
#loading, #game_menu {
  text-align: center;
  padding-top: 1em;
}
#menu {
  height: 1.5em;
}

#game {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
#map {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 2em;
}
#menu {
  position: absolute;
  height: 2em;
  bottom: 0;
}

#message {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10000;
}
#message_background {
  width: 100%;
  height: 100%;
  
  background-color: grey;
  
  filter:alpha(opacity=50);
  -moz-opacity:0.5;
  -khtml-opacity: 0.5;
  opacity: 0.5;
}
#message_container {
  background-color: white;
  border: 1px black solid;
  position: absolute;
  top: 1em;
  left: 1em;
  right: 1em;
  bottom: 1em;
  padding: 1em;
}  

